clusters/homelab/apps/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    gateway.infra.services/allow-routes: "true"
