clusters/homelab/apps/vaultwarden/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "vault.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vaultwarden
          port: 80
